<resources>
    <string name="app_name">eventPlanning</string>
    <string name="logout">LOGOUT</string>
    <string name="register">REGISTER</string>
    <string name="email">Enter Email-ID</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="click_here_to_login">Click here to Login</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="event_name">Event Name</string>
    <string name="event_date">Event Date</string>
    <string name="event_time">Event Time</string>
    <string name="event_location">Event Location</string>
    <string name="create_event">Create Event</string>
    <string name="LOGIN">LOGIN</string>
    <string name="register_here">Register Here!</string>
    <string name="search">Search</string>
    <string name="default_notification_channel_id">default_channel_id</string>
</resources>