<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login"
    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
    android:background="@drawable/bg"
    android:padding="10dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LOGIN"
        android:layout_marginTop="200dp"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="#4c3228"
        android:layout_marginBottom="10dp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#99FAEED3"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="#2E2E2E"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textEmailAddress"
            android:background="#99FAEED3"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:id="@+id/password"/>
    </com.google.android.material.textfield.TextInputLayout>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/progressBar"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/white"
        android:backgroundTint="#4c3228"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:textSize="20sp"
        android:id="@+id/btn_login"/>

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/register"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:text="@string/don_t_have_an_account"
        android:layout_marginTop="30dp"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/register_here"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:text="@string/register_here"
        android:textColor="#4c3228"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>