<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register"
    android:padding="10dp"
    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
    android:background="@drawable/bg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="150dp"
        android:text="@string/register"
        android:textColor="#4c3228"
        android:textSize="40sp"
        android:textStyle="bold" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"
            android:id="@+id/email"
            android:background="#99FAEED3"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_new_password"
            android:inputType="textEmailAddress"
            android:textSize="20sp"
            android:background="#99FAEED3"
            android:layout_marginBottom="20dp"
            android:id="@+id/password"/>
    </com.google.android.material.textfield.TextInputLayout>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:visibility="gone"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/white"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        android:backgroundTint="#4c3228"
        android:id="@+id/btn_register"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login"
        android:textColor="#4c3228"
        android:layout_marginBottom="40dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="bottom"
        android:text="@string/click_here_to_login"/>
</LinearLayout>